--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 
 }
 [data-theme="dark"] {
-    --background: #656565;
-    --text: #e0e0e0;
+    --background: #1c1c1e;
+    --text: #fefefe;
     --elements: #ffffff;
     --button-text: #000000;
 
