--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,13 @@ ul {
       top: .5rem;
   }
 
+  button[type=button].toast-btn {
+      position: static;
+  }
+  .tost-link, .tost-link:hover, .tost-link:active, .tost-link:link, .tost-link:visited {
+      text-decoration: none;
+      color: #ffffff;
+  }
   h1 {
       color: var(--text);
   }
