--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,13 @@ button:hover {
 html , body{
     background-color: var(--background);
     margin: 0;
-    height: 100%;
+    height: 98%;
 }
 
 ul {
     list-style-type: none;
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
+    max-height: 50vh;
   }
 
 
@@ -40,7 +41,9 @@ ul {
       background-color: var(--elements);
       overflow-wrap: break-word;
       white-space: normal;
+      
   }
+
 
   .item:first-child {
     border-top-left-radius: 7px;
@@ -95,7 +98,7 @@ ul {
   }
 
   #main-container {
-      /* height: 100vh; */
+      height: 80vh;
       background-color: var(--background) !important;
   }
 
