--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,32 @@ html , body{
     background-color: var(--background);
     margin: 0;
     height: 98%;
-}
+    /* --scrollbarBG: #CFD8DC;
+    --thumbBG: #90A4AE;*/
+} 
+
+/* ::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  #todo-list::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  #todo-list::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+  
+  #todo-list::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  } */
 
 ul {
     list-style-type: none;
-    overflow-y: scroll;
+    
     max-height: 50vh;
   }
 
@@ -143,3 +164,7 @@ ul {
            margin-top: 15px;
        }
    } */
+
+.scroll {
+    overflow-y: scroll;
+}
